// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`x annotation handles rendering updating multiple annotations 1`] = `
<svg viewBox="0 0 100 50">
  <g class="x-annotation" transform="translate(0,0)">
    <line class="x-line" font-size="10" stroke="red" x1="50" x2="50" y1="0" y2="50" style="stroke: red; stroke-width: 1.5;"></line>
    <text class="x-text" display="inline" font-size="10" x="0" y="-50" style="pointer-events: none; user-select: none; transform: rotate(90deg) translateY(-5px); fill: red;">
      some text
    </text>
  </g>
  <g class="x-annotation" transform="translate(0,0)">
    <line class="x-line" font-size="10" stroke="red" x1="0" x2="0" y1="0" y2="50" style="stroke: red; stroke-width: 1.5;"></line>
    <text class="x-text" display="inline" font-size="10" x="0" y="0" style="pointer-events: none; user-select: none; transform: rotate(90deg) translateY(-5px); fill: red;">
      some text (12/31/1999)
    </text>
  </g>
  <g class="x-annotation" transform="translate(0,0)">
    <line class="x-line" font-size="10" x1="0" x2="0" y1="0" y2="50" style="stroke: red; stroke-width: 1.5;"></line>
    <text class="x-text" display="none" font-size="10" x="0" y="0" style="pointer-events: none; user-select: none; transform: rotate(90deg) translateY(-5px); fill: red;"></text>
  </g>
  <g class="x-annotation" transform="translate(0,0)">
    <line class="x-line" font-size="10" x1="99" x2="99" y1="0" y2="50" style="stroke: red; stroke-width: 1.5;"></line>
    <text class="x-text" display="inline" font-size="10" x="0" y="-99" style="pointer-events: none; user-select: none; transform: rotate(90deg) translateY(-5px); fill: red;">
      some text (12/30/2000)
    </text>
  </g>
  <g class="x-annotation" transform="translate(0,0)">
    <line class="x-line" font-size="10" x1="99" x2="99" y1="0" y2="50" style="stroke: red; stroke-width: 1.5;"></line>
    <text class="x-text" display="inline" font-size="10" x="0" y="-99" style="pointer-events: none; user-select: none; transform: rotate(90deg) translateY(-5px); fill: red;">
      some text
    </text>
  </g>
</svg>
`;

exports[`x annotation has proper annotation grouping structure 1`] = `
<svg viewBox="0 0 100 50">
  <g class="x-annotation" transform="translate(0,0)">
    <line class="x-line" font-size="10" stroke="red" x1="50" x2="50" y1="0" y2="50" style="stroke: red; stroke-width: 1.5;"></line>
    <text class="x-text" display="inline" font-size="10" x="0" y="-50" style="pointer-events: none; user-select: none; transform: rotate(90deg) translateY(-5px); fill: red;">
      some text
    </text>
  </g>
  <g class="x-annotation" transform="translate(0,0)">
    <line class="x-line" font-size="10" x1="99" x2="99" y1="0" y2="50" style="stroke: red; stroke-width: 1.5;"></line>
    <text class="x-text" display="inline" font-size="10" x="0" y="-99" style="pointer-events: none; user-select: none; transform: rotate(90deg) translateY(-5px); fill: red;">
      some text
    </text>
  </g>
</svg>
`;

exports[`x annotation renders correctly 1`] = `
<svg viewBox="0 0 100 50">
  <g class="x-annotation" transform="translate(0,0)">
    <line class="x-line" font-size="10" x1="50" x2="50" y1="0" y2="50" style="stroke: red; stroke-width: 1.5;"></line>
    <text class="x-text" display="inline" font-size="10" x="0" y="-50" style="pointer-events: none; user-select: none; transform: rotate(90deg) translateY(-5px); fill: red;">
      some text
    </text>
  </g>
</svg>
`;

exports[`y annotation annotation has proper grouping structure 1`] = `
<svg viewBox="0 0 100 50">
  <g class="y-annotation" transform="translate(0,25)">
    <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: red; stroke-width: 1.5;"></line>
    <text class="y-value-text" display="none" text-anchor="start" x="105" y="3" style="user-select: none; pointer-events: none; font-size: 10; fill: red;"></text>
    <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="user-select: none; pointer-events: none; font-size: 10; fill: red;">
      some text
    </text>
    <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: none;"></rect>
  </g>
  <g class="y-annotation-editable" transform="translate(0,0)">
    <rect class="y-annotation" height="20" width="18" x="101" y="-9" style="pointer-events: auto; stroke: red; stroke-width: 1.5; fill: white;"></rect>
    <g class="y-elements-group" transform="translate(0,2)">
      <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: red; stroke-width: 1.5;"></line>
      <text class="y-value-text" display="none" text-anchor="start" x="105" y="3" style="font-size: 10; user-select: none; pointer-events: none; fill: red;"></text>
      <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="font-size: 10; user-select: none; pointer-events: none; fill: red;">
        some text
      </text>
      <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: none;"></rect>
      <line class="y-handle-one" x1="113" x2="113" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
      <line class="y-handle-two" x1="115" x2="115" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
    </g>
  </g>
</svg>
`;

exports[`y annotation handles rendering updating multiple annotations 1`] = `
<svg viewBox="0 0 100 50">
  <g class="y-annotation" transform="translate(0,25)">
    <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: red; stroke-width: 1.5;"></line>
    <text class="y-value-text" display="none" text-anchor="start" x="105" y="3" style="user-select: none; pointer-events: none; font-size: 10; fill: red;"></text>
    <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="user-select: none; pointer-events: none; font-size: 10; fill: red;">
      some text
    </text>
    <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: none;"></rect>
  </g>
  <g class="y-annotation-editable" transform="translate(0,0)">
    <rect class="y-annotation" height="20" width="45" x="101" y="38" style="pointer-events: auto; stroke: red; stroke-width: 1.5; fill: white;"></rect>
    <g class="y-elements-group" transform="translate(0,49)">
      <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: red; stroke-width: 1.5;"></line>
      <text class="y-value-text" display="inline" text-anchor="start" x="105" y="3" style="font-size: 10; user-select: none; pointer-events: none; fill: red;">
        2
      </text>
      <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="font-size: 10; user-select: none; pointer-events: none; fill: red;">
        some text
      </text>
      <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: none;"></rect>
      <line class="y-handle-one" x1="140" x2="140" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
      <line class="y-handle-two" x1="142" x2="142" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
    </g>
  </g>
  <g class="y-annotation" transform="translate(0,1)">
    <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: red; stroke-width: 1.5;"></line>
    <text class="y-value-text" display="inline" text-anchor="start" x="105" y="3" style="user-select: none; pointer-events: none; font-size: 10; fill: red;">
      98
    </text>
    <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="user-select: none; pointer-events: none; font-size: 10; fill: red;">
      some text
    </text>
    <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: none;"></rect>
  </g>
  <g class="y-annotation" transform="translate(0,49.5)">
    <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: red; stroke-width: 1.5;"></line>
    <text class="y-value-text" display="none" text-anchor="start" x="105" y="3" style="user-select: none; pointer-events: none; font-size: 10; fill: red;"></text>
    <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="user-select: none; pointer-events: none; font-size: 10; fill: red;">
      some text
    </text>
    <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: none;"></rect>
  </g>
  <g class="y-annotation-editable" transform="translate(0,0)">
    <rect class="y-annotation" height="20" width="18" x="101" y="-10.5" style="pointer-events: auto; stroke: red; stroke-width: 1.5; fill: white;"></rect>
    <g class="y-elements-group" transform="translate(0,0.5)">
      <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: red; stroke-width: 1.5;"></line>
      <text class="y-value-text" display="none" text-anchor="start" x="105" y="3" style="font-size: 10; user-select: none; pointer-events: none; fill: red;"></text>
      <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="font-size: 10; user-select: none; pointer-events: none; fill: red;">
        some text
      </text>
      <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: none;"></rect>
      <line class="y-handle-one" x1="113" x2="113" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
      <line class="y-handle-two" x1="115" x2="115" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
    </g>
  </g>
</svg>
`;

exports[`y annotation renders correctly 1`] = `
<svg viewBox="0 0 100 50">
  <g class="y-annotation" transform="translate(0,25)">
    <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: red; stroke-width: 1.5;"></line>
    <text class="y-value-text" display="none" text-anchor="start" x="105" y="3" style="user-select: none; pointer-events: none; font-size: 10; fill: red;"></text>
    <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="user-select: none; pointer-events: none; font-size: 10; fill: red;">
      some text
    </text>
    <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: none;"></rect>
  </g>
</svg>
`;

exports[`y annotation renders different draggable handles for annotations according to showValue 1`] = `
<svg viewBox="0 0 100 50">
  <g class="y-annotation-editable" transform="translate(0,0)">
    <rect class="y-annotation" height="20" width="45" x="101" y="14" style="pointer-events: auto; stroke: red; stroke-width: 1.5; fill: white;"></rect>
    <g class="y-elements-group" transform="translate(0,25)">
      <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: red; stroke-width: 1.5;"></line>
      <text class="y-value-text" display="inline" text-anchor="start" x="105" y="3" style="font-size: 10; user-select: none; pointer-events: none; fill: red;">
        50
      </text>
      <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="font-size: 10; user-select: none; pointer-events: none; fill: red;">
        some text
      </text>
      <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: none;"></rect>
      <line class="y-handle-one" x1="140" x2="140" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
      <line class="y-handle-two" x1="142" x2="142" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
    </g>
  </g>
  <g class="y-annotation-editable" transform="translate(0,0)">
    <rect class="y-annotation" height="20" width="18" x="101" y="37.5" style="pointer-events: auto; stroke: blue; stroke-width: 1.5; fill: white;"></rect>
    <g class="y-elements-group" transform="translate(0,48.5)">
      <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: blue; stroke-width: 1.5;"></line>
      <text class="y-value-text" display="none" text-anchor="start" x="105" y="3" style="font-size: 10; user-select: none; pointer-events: none; fill: blue;"></text>
      <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="font-size: 10; user-select: none; pointer-events: none; fill: blue;">
        some text
      </text>
      <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: none;"></rect>
      <line class="y-handle-one" x1="113" x2="113" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
      <line class="y-handle-two" x1="115" x2="115" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
    </g>
  </g>
</svg>
`;

exports[`y annotation updates annotation label and value text visibility 1`] = `
<svg viewBox="0 0 100 50">
  <g class="y-annotation" transform="translate(0,25)">
    <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: red; stroke-width: 1.5;"></line>
    <text class="y-value-text" display="none" text-anchor="start" x="105" y="3" style="user-select: none; pointer-events: none; font-size: 10; fill: red;"></text>
    <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="user-select: none; pointer-events: none; font-size: 10; fill: red;">
      some text
    </text>
    <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: none;"></rect>
  </g>
  <g class="y-annotation-editable" transform="translate(0,0)">
    <rect class="y-annotation" height="20" width="45" x="101" y="22.33333333333333" style="pointer-events: auto; stroke: red; stroke-width: 1.5; fill: white;"></rect>
    <g class="y-elements-group" transform="translate(0,33.33333333333333)">
      <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: red; stroke-width: 1.5;"></line>
      <text class="y-value-text" display="inline" text-anchor="start" x="105" y="3" style="font-size: 10; user-select: none; pointer-events: none; fill: red;">
        33.33
      </text>
      <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="font-size: 10; user-select: none; pointer-events: none; fill: red;">
        some-label!
      </text>
      <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: none;"></rect>
      <line class="y-handle-one" x1="140" x2="140" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
      <line class="y-handle-two" x1="142" x2="142" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
    </g>
  </g>
</svg>
`;

exports[`y annotation updates position and text value when value is updated 1`] = `
<svg viewBox="0 0 100 50">
  <g class="y-annotation" transform="translate(0,25)">
    <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: red; stroke-width: 1.5;"></line>
    <text class="y-value-text" display="none" text-anchor="start" x="105" y="3" style="user-select: none; pointer-events: none; font-size: 10; fill: red;"></text>
    <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="user-select: none; pointer-events: none; font-size: 10; fill: red;">
      some text
    </text>
    <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: none;"></rect>
  </g>
  <g class="y-annotation-editable" transform="translate(0,0)">
    <rect class="y-annotation" height="20" width="45" x="101" y="35.5" style="pointer-events: auto; stroke: red; stroke-width: 1.5; fill: white;"></rect>
    <g class="y-elements-group" transform="translate(0,46.5)">
      <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: red; stroke-width: 1.5;"></line>
      <text class="y-value-text" display="inline" text-anchor="start" x="105" y="3" style="font-size: 10; user-select: none; pointer-events: none; fill: red;">
        7
      </text>
      <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="font-size: 10; user-select: none; pointer-events: none; fill: red;">
        some text
      </text>
      <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: none;"></rect>
      <line class="y-handle-one" x1="140" x2="140" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
      <line class="y-handle-two" x1="142" x2="142" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
    </g>
  </g>
</svg>
`;

exports[`y annotation updates type of annotation rendered depending on isEditable 1`] = `
<svg viewBox="0 0 100 50">
  <g class="y-annotation" transform="translate(0,25)">
    <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: red; stroke-width: 1.5;"></line>
    <text class="y-value-text" display="none" text-anchor="start" x="105" y="3" style="user-select: none; pointer-events: none; font-size: 10; fill: red;"></text>
    <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="user-select: none; pointer-events: none; font-size: 10; fill: red;">
      some text
    </text>
    <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: none;"></rect>
  </g>
  <g class="y-annotation-editable" transform="translate(0,0)">
    <rect class="y-annotation" height="20" width="18" x="101" y="22.33333333333333" style="pointer-events: auto; stroke: red; stroke-width: 1.5; fill: white;"></rect>
    <g class="y-elements-group" transform="translate(0,33.33333333333333)">
      <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: red; stroke-width: 1.5;"></line>
      <text class="y-value-text" display="none" text-anchor="start" x="105" y="3" style="font-size: 10; user-select: none; pointer-events: none; fill: red;"></text>
      <text class="y-text" display="none" text-anchor="end" x="95" y="-5" style="font-size: 10; user-select: none; pointer-events: none; fill: red;"></text>
      <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: none;"></rect>
      <line class="y-handle-one" x1="113" x2="113" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
      <line class="y-handle-two" x1="115" x2="115" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
    </g>
  </g>
</svg>
`;

exports[`y thresholds with gradients does not render gradients for non-thresholds (annotations)  1`] = `
<svg viewBox="0 0 100 50">
  <defs class="y-annotations">
    <linearGradient class="y-annotation" gradientTransform="rotate(90)" id="threshold-one--blue">
      <stop class="gradient-y-one" offset="0%" style="stop-color: blue; stop-opacity: 0;"></stop>
      <stop class="gradient-y-two" offset="80%" style="stop-color: blue; stop-opacity: 0.33;"></stop>
    </linearGradient>
    <linearGradient class="y-annotation" gradientTransform="rotate(90)" id="threshold-one--blue">
      <stop class="gradient-y-one" offset="0%" style="stop-color: blue; stop-opacity: 0;"></stop>
      <stop class="gradient-y-two" offset="80%" style="stop-color: blue; stop-opacity: 0.33;"></stop>
    </linearGradient>
  </defs>
  <g class="y-annotation" transform="translate(0,25)">
    <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: blue; stroke-width: 1.5;"></line>
    <text class="y-value-text" display="inline" text-anchor="start" x="105" y="3" style="user-select: none; pointer-events: none; font-size: 10; fill: blue;">
      50
    </text>
    <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="user-select: none; pointer-events: none; font-size: 10; fill: blue;">
      some text
    </text>
    <rect class="gradient-annotation" display="inline" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: url(#threshold-one--blue);"></rect>
  </g>
  <g class="y-annotation" transform="translate(0,25)">
    <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: blue; stroke-width: 1.5;"></line>
    <text class="y-value-text" display="inline" text-anchor="start" x="105" y="3" style="user-select: none; pointer-events: none; font-size: 10; fill: blue;">
      50
    </text>
    <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="user-select: none; pointer-events: none; font-size: 10; fill: blue;">
      some text
    </text>
    <rect class="gradient-annotation" display="none" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: url(#threshold-one--blue);"></rect>
  </g>
</svg>
`;

exports[`y thresholds with gradients has proper grouping structure 1`] = `
<svg viewBox="0 0 100 50">
  <defs class="y-annotations">
    <linearGradient class="y-annotation" gradientTransform="rotate(90)" id="threshold-one--blue">
      <stop class="gradient-y-one" offset="0%" style="stop-color: blue; stop-opacity: 0;"></stop>
      <stop class="gradient-y-two" offset="80%" style="stop-color: blue; stop-opacity: 0.33;"></stop>
    </linearGradient>
    <linearGradient class="y-annotation" gradientTransform="rotate(90)" id="threshold-two--blue">
      <stop class="gradient-y-one" offset="0%" style="stop-color: blue; stop-opacity: 0;"></stop>
      <stop class="gradient-y-two" offset="80%" style="stop-color: blue; stop-opacity: 0.33;"></stop>
    </linearGradient>
  </defs>
  <g class="y-annotation" transform="translate(0,25)">
    <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: blue; stroke-width: 1.5;"></line>
    <text class="y-value-text" display="inline" text-anchor="start" x="105" y="3" style="user-select: none; pointer-events: none; font-size: 10; fill: blue;">
      50
    </text>
    <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="user-select: none; pointer-events: none; font-size: 10; fill: blue;">
      some text
    </text>
    <rect class="gradient-annotation" display="inline" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: url(#threshold-one--blue);"></rect>
  </g>
  <g class="y-annotation-editable" transform="translate(0,0)">
    <rect class="y-annotation" height="20" width="18" x="101" y="-9" style="pointer-events: auto; stroke: blue; stroke-width: 1.5; fill: white;"></rect>
    <g class="y-elements-group" transform="translate(0,2)">
      <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: blue; stroke-width: 1.5;"></line>
      <text class="y-value-text" display="none" text-anchor="start" x="105" y="3" style="font-size: 10; user-select: none; pointer-events: none; fill: blue;"></text>
      <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="font-size: 10; user-select: none; pointer-events: none; fill: blue;">
        some text
      </text>
      <rect class="gradient-annotation" display="inline" height="2.5" transform="rotate(180)" width="100" x="-100" y="-2.5" style="fill: url(#threshold-two--blue);"></rect>
      <line class="y-handle-one" x1="113" x2="113" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
      <line class="y-handle-two" x1="115" x2="115" y1="-6" y2="4" style="stroke: gray; stroke-width: 1;"></line>
    </g>
  </g>
</svg>
`;

exports[`y thresholds with gradients renders correctly 1`] = `
<svg viewBox="0 0 100 50">
  <defs class="y-annotations">
    <linearGradient class="y-annotation" gradientTransform="rotate(90)" id="threshold-one--blue">
      <stop class="gradient-y-one" offset="0%" style="stop-color: blue; stop-opacity: 0;"></stop>
      <stop class="gradient-y-two" offset="80%" style="stop-color: blue; stop-opacity: 0.33;"></stop>
    </linearGradient>
  </defs>
  <g class="y-annotation" transform="translate(0,25)">
    <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: blue; stroke-width: 1.5;"></line>
    <text class="y-value-text" display="inline" text-anchor="start" x="105" y="3" style="user-select: none; pointer-events: none; font-size: 10; fill: blue;">
      50
    </text>
    <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="user-select: none; pointer-events: none; font-size: 10; fill: blue;">
      some text
    </text>
    <rect class="gradient-annotation" display="inline" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: url(#threshold-one--blue);"></rect>
  </g>
</svg>
`;

exports[`y thresholds with gradients renders initial color 1`] = `
<svg viewBox="0 0 100 50">
  <defs class="y-annotations">
    <linearGradient class="y-annotation" gradientTransform="rotate(90)" id="threshold-one--blue">
      <stop class="gradient-y-one" offset="0%" style="stop-color: blue; stop-opacity: 0;"></stop>
      <stop class="gradient-y-two" offset="80%" style="stop-color: blue; stop-opacity: 0.33;"></stop>
    </linearGradient>
  </defs>
  <g class="y-annotation" transform="translate(0,25)">
    <line class="y-line" x1="0" x2="100" y1="0" y2="0" style="stroke: blue; stroke-width: 1.5;"></line>
    <text class="y-value-text" display="inline" text-anchor="start" x="105" y="3" style="user-select: none; pointer-events: none; font-size: 10; fill: blue;">
      50
    </text>
    <text class="y-text" display="inline" text-anchor="end" x="95" y="-5" style="user-select: none; pointer-events: none; font-size: 10; fill: blue;">
      some text
    </text>
    <rect class="gradient-annotation" display="inline" height="2.5" transform="rotate(0)" width="100" x="0" y="-2.5" style="fill: url(#threshold-one--blue);"></rect>
  </g>
</svg>
`;
